--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,158 @@
-.loading
-{
+html,
+body {
+    margin: 0;
+    color: var(--text-color);
+    font-family: var(--font-family);
+    font-size: 11px;
+    width: 100%;
+    height: 100%;
+}
+
+.root {
+    width: 100%;
+    height: 100%;
+}
+
+.menubar {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: flex;
+}
+
+.content {
+    display: flex;
+    flex-direction: row;
+    height: calc(100% - 50px);
+}
+
+.left-panel {
+    width: 300px;
+    overflow-y: auto;
+}
+
+.main-panel {
+    width: calc(100% - 300px);
+    background-color: black;
+}
+
+.canvas-container {
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+h1 {
+    white-space: nowrap;
+}
+
+.title {
+    color: var(--yellow-100);
+    text-decoration: none;
+}
+
+.title:hover {
+    text-decoration: underline;
+}
+
+h2 {
+    font-size: 16px;
+    padding-bottom: 5px;
+}
+
+h3 {
+    font-size: 12px;
+    padding-left: 2px;
+    padding-top: 3px;
+    font-weight: 500;
+    font-style: italic;
+}
+
+hr.solid {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(254, 240, 205, 0.749), rgba(0, 0, 0, 0));
+}
+
+.colorpicker {
+    background-color: transparent;
+    appearance: none;
+    border: none;
+}
+
+.slider-div {
+    display: flex;
+    align-items: center;
+    justify-content: flex;
+    height: auto;
+}
+
+.logo {
+    padding-top: 25px;
+}
+
+.custom-file-label {
+    display: inline-block;
+    border: 1px solid #999;
+    padding: 5px 8px;
+    cursor: pointer;
+    font-weight: 700;
+    font-size: 10pt;
+}
+
+.custom-file-label:hover::before {
+    background-color: black;
+}
+
+.data-button {
+    display: inline-block;
+    border: 1px solid #999;
+    padding: 7px 8px;
+    font-weight: 700;
+    font-size: 10pt;
+}
+
+.nvis {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.nanovis {
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.nanovis:hover {
+    text-decoration: underline;
+}
+
+.logo-image {
+    width:270px;
+    height: auto;
+}
+
+.emscripten {
+    background-color: black;
+    width: 100%;
+    overflow: hidden;
+    display: block;
+	position: relative;
+    image-rendering: optimizeSpeed;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -o-crisp-edges;
+    image-rendering: -webkit-optimize-contrast;
+    image-rendering: optimize-contrast;
+    image-rendering: crisp-edges;
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+}
+
+.loading {
 	position: absolute;
 	margin: auto;
 	top: 50%;
@@ -14,8 +167,7 @@
 	background-repeat: no-repeat;
 }
 
-#loadingcontainer
-{
+#loadingcontainer {
     top: 0px;
     left: 0px;
     margin: 0px;
@@ -30,4 +182,31 @@
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 50px;
+    background-color: black;
+}
+
+#errorcontainer {
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    border: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    display: none;
+	position: absolute;
+	z-index: 30;
+    background:black;
+    background:rgba(0,0,0,0.8);
+    backdrop-filter: blur(4px);
+    justify-content: center;
+    align-items: center;
+    font-size: 22px;
+    text-align: center;
+}
+
+
+#errorcontainer h1 {
+    font-size: 40pt;
+    text-align: center;
 }
