--- a/css/index.css
+++ b/css/index.css
@@ -178,11 +178,32 @@ hr.solid {
     display: none;
 	position: absolute;
 	z-index: 20;
-	background-image: url('../img/loading.gif');
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: 50px;
     background-color: black;
+}
+
+#loadingcircle {
+    top: 0px;
+    left: 0px;
+    margin: 0px;
+    border: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+	position: absolute;
+	z-index: 20;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: 50px;
+	background-image: url('../img/loading.gif');
+}
+
+#loadingtext {
+    margin-top: 50px;
+    width: 300px;
+    text-align: center;
 }
 
 #errorcontainer {
